# Open-OCR-Control

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __main__.py  api.py  config.py  main.py  models.py
app/services/: docker_manager.py  document_processor.py  exporter.py  job_manager.py  ocr_client.py  ocr_output.py  output_filter.py
docs/: README.de.md  architecture.md  operations.md  verification.md
docs/adrs/: 0001-modular-monolith.md  0002-page-level-streaming.md  0003-docker-on-demand.md  0004-ephemeral-job-state.md  0005-secure-rich-preview.md  0006-grounding-image-assets.md  0007-sequential-document-batches.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  i18n.test.ts  i18n.ts  rehypeLatexDelimiters.test.ts  rehypeLatexDelimiters.ts  rehypePreserveLineBreaks.ts  styles.css  types.ts  utils.test.ts  utils.ts
tests/: mock_ocr_server.py  test_document_processor.py  test_exporter.py  test_job_manager.py  test_ocr_client.py  test_ocr_output.py  test_output_filter.py
tests/fixtures/: sample.rtf
