[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "open-ocr-control"
version = "0.1.0"
description = "Local web control plane for Baidu Unlimited-OCR"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Tim Bornemann" }]
dependencies = [
  "docker==7.2.0",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pillow==12.3.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pymupdf==1.28.0",
  "python-multipart==0.0.32",
  "starlette==1.3.1",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["docker", "docker.*", "fitz", "fitz.*"]
ignore_missing_imports = true
